--- a/MeetingNotes/06032019.md
+++ b/MeetingNotes/06032019.md
@@ -2,17 +2,17 @@ Minutes
 
 - Attendees
 
-•	Karin Bredenberg (National Archives of Sweden, chair)
-•	Anders Bo Nielsen (National Archives of Denmark)
-•	Miguel Ferreira (KEEP Solutions)
-•	Gregor Zavrsnik (Geoarh)
-•	Sven Schlarb (Austrian Institute of Technology)
-•	Jaime Kaminski (DLM)
-•	Karin Oolu (DLM)
-•	Arne-Kristian Groven (National Archives of Norway)
-•	Maximilian Maede (Bundesarchiv, Germany)
-•	Carl Wilson (A3, OPF) 
-•	Phillip Tømmerholt (National Archives of Denmark)
+Karin Bredenberg (National Archives of Sweden, chair)
+Anders Bo Nielsen (National Archives of Denmark)
+Miguel Ferreira (KEEP Solutions)
+Gregor Zavrsnik (Geoarh)
+Sven Schlarb (Austrian Institute of Technology)
+Jaime Kaminski (DLM)
+Karin Oolu (DLM)
+Arne-Kristian Groven (National Archives of Norway)
+Maximilian Maede (Bundesarchiv, Germany)
+Carl Wilson (A3, OPF) 
+Phillip Tømmerholt (National Archives of Denmark)
 
 - Agenda:
 
@@ -23,7 +23,6 @@ Minutes
 
 CW reports of ongoing work with branching concepts and author’s guide in GH.
 
-1. 
 KB confirms that everyone has got Excel sheet with comments and looked at them. SIARD comments needs to be solved with Swiss Federal Archives. MF proposes approach to handle the comments that each spec owner will take care of comments and create issues and ask others if needs help. Overall comments (13) will be looked through together. This work needs to be finished by the end of April. CW is willing help to take CSIP comments and creating issues in GH. PT offers he and ABN can take DIP part and agrees to do overall comments all together. SIARD comments are tricky.
 It was decided that KB with help from CW will take care of CSIP comments. KB will create a list of labels and sends out an e-mail. There will be following meetings in future about issues we are going to discuss together, also number of those of CSIP.  
 
