--- a/MeetingNotes/12032019.md
+++ b/MeetingNotes/12032019.md
@@ -20,11 +20,16 @@ ABN suggests to keep IP specs separate from content types IP specs, same for dat
 1.	The status of issues from the review up in different repositories: 
 
 CSIP – all are up, 95, KB and CW will go through them all and see what to do with, also create milestone. 
+
 SIP – MF: issues are created, tied accordingly. There are 3 first ones with “help wanted” which are more structural oriented. By next week will be able to report that all issues are addressed and fixed, except 3 first ones. The 2nd one might be CSIP. Will discuss them next week. 
 KB suggestion to all: pinpoint to KB the issue number and we’ll have the discussion next week. 
+
 AIP - SS: Issues are registered, lot of them are small comments, incorrect names etc, many others are misunderstandings of the concept, few things should be explaining more detailed, others are just high level kind of recommendations what we should improve, which I think we should discuss. Some are complicated. Just need to address them. 
+
 DIP – PT: comments we have 3 issues that we haven’t put GH yet, but we have created 31 for SIARD and relational db-s. Only 3 for the DIP. Most of the issues for SIARD are concerning directly SIARD format, few are how to structure all the information about the db-s outside SIARD file together. ABN comments that’s the reason why we need to separate them and have SIARD as format and SIARD as content inf. type separately. At the moment there are labels with different colour as green directly to SIARD (in the beginning) and purple to SIARD CITS. KB suggests that we need to discuss that. 
+
 KB reports that GZ has gone through comments but have not created issues yet. 
+
 RM – KB: only 3 issues, they are there. Used lot of labels. 
 
 2.	Discussion about overall issues in GH 
@@ -33,19 +38,20 @@ RM – KB: only 3 issues, they are there. Used lot of labels.
 - Images https://github.com/DILCISBoard/GroupDocumentation/issues/4: Assigned to JK.
 MF Q can we create language issues to JK? Yes, he is going to redraw all of them. SS Q about collaborative tool for figures. It will be Microsoft Visio, which is not always available, and not collaborative, but it’s one of the best tools to create schemas. KB we can’t change it in this project. 
 MF Q from CW about the program where nice drawing in the end of GH doc has done. It’s a plugin in Chrome, draw.io, this is collaborative, in Google Drive. KB will have Jamie look this, but he is going to make a sort of template for images, next week. ABN suggest to use tool Pencil, but it’s not working collaborative editing. Will have that on the agenda in next week.
-Syntax errors https://github.com/DILCISBoard/GroupDocumentation/issues/6: Assigned to CW and KB.
-Broken links in tables https://github.com/DILCISBoard/GroupDocumentation/issues/7: Assigned to CW.
-Glossary https://github.com/DILCISBoard/GroupDocumentation/issues/8: Suggestion to have a glossary. We are using terms from OAIS, MF comments SIP had a glossary. We need to think if we have also content type inf specs, it might be a tricky Q. SS its also a good idea to think about library of congress example. Decided to investigate this comment more. 
-More dence, moving text around comment https://github.com/DILCISBoard/GroupDocumentation/issues/9: PT its possible to have a full list of all req-s that are in CSIP, MF agrees. MF suggests to have an appendix instead of separate doc? – comment added + assigned to CW and KB.
-Common structure for all specs https://github.com/DILCISBoard/GroupDocumentation/issues/10: We should have it in next project. JA adds that might we be in trouble on this? For review we need to have an answer why it is not common in all docs. MF comments that if this is only matter of changing names of chapters, we can do that. PT missing now is how we describe previous project and previous authors; we need common structure with all that. MF agrees absolutely. Harmonise the design and pictures, also section names, that would be a pretty good effort. KB and CW will go through this. MF suggest if you could create a history of specs, would be nice to have a common pre-section to each specs. How to move around, common section. Leaving the issue is as it is. 
-Extra elements https://github.com/DILCISBoard/GroupDocumentation/issues/11: Label Dilcis board is added.
-Common structure https://github.com/DILCISBoard/GroupDocumentation/issues/12: If we have combined spec-s there is no problem, we need to discuss that further on. MF agrees, at least have text saying this req is related to another req. KB suggests to have it in profile? They do have a different pre-letters before the numbers. KB adds a comment how to connect req-s in different specs.
-2016 https://github.com/DILCISBoard/GroupDocumentation/issues/14: This is not a thing we are going to do smth, not going to address anyone. Encourages to solve issues. 
-Standard as a great initiative https://github.com/DILCISBoard/GroupDocumentation/issues/15: Encourages us, also label wontfix. ABN suggest we can add the link to the comment. 
+- Syntax errors https://github.com/DILCISBoard/GroupDocumentation/issues/6: Assigned to CW and KB.
+- Broken links in tables https://github.com/DILCISBoard/GroupDocumentation/issues/7: Assigned to CW.
+- Glossary https://github.com/DILCISBoard/GroupDocumentation/issues/8: Suggestion to have a glossary. We are using terms from OAIS, MF comments SIP had a glossary. We need to think if we have also content type inf specs, it might be a tricky Q. SS its also a good idea to think about library of congress example. Decided to investigate this comment more. 
+- More dence, moving text around comment https://github.com/DILCISBoard/GroupDocumentation/issues/9: PT its possible to have a full list of all req-s that are in CSIP, MF agrees. MF suggests to have an appendix instead of separate doc? – comment added + assigned to CW and KB.
+- Common structure for all specs https://github.com/DILCISBoard/GroupDocumentation/issues/10: We should have it in next project. JA adds that might we be in trouble on this? For review we need to have an answer why it is not common in all docs. MF comments that if this is only matter of changing names of chapters, we can do that. PT missing now is how we describe previous project and previous authors; we need common structure with all that. MF agrees absolutely. Harmonise the design and pictures, also section names, that would be a pretty good effort. KB and CW will go through this. MF suggest if you could create a history of specs, would be nice to have a common pre-section to each specs. How to move around, common section. Leaving the issue is as it is. 
+- Extra elements https://github.com/DILCISBoard/GroupDocumentation/issues/11: Label Dilcis board is added.
+- Common structure https://github.com/DILCISBoard/GroupDocumentation/issues/12: If we have combined spec-s there is no problem, we need to discuss that further on. MF agrees, at least have text saying this req is related to another req. KB suggests to have it in profile? They do have a different pre-letters before the numbers. KB adds a comment how to connect req-s in different specs.
+- 2016 https://github.com/DILCISBoard/GroupDocumentation/issues/14: This is not a thing we are going to do smth, not going to address anyone. Encourages to solve issues. 
+- Standard as a great initiative https://github.com/DILCISBoard/GroupDocumentation/issues/15: Encourages us, also label wontfix. ABN suggest we can add the link to the comment. 
 
 3.	CW reports of two Q-s from validation group meeting
 
 Req-s creation dates of files – what if the date in modification is set in the future, do we care? MF Q what if the packages are created in Australia? Tricky. KB we do have attribute as date time, time zone. Lets discuss that together with issues for CSIP. 
+
 Mime type attributes - tricky ones. Feels like a good thing to do in theory, but it’s not complete. That’s also why we have extra elements in CSIP. We have issue regarding mime type. KB and CW will look issues and bring back to table again next week. 
 
 Notes by: Karin Oolu
