--- a/MeetingNotes/12032019.md
+++ b/MeetingNotes/12032019.md
@@ -12,7 +12,7 @@ Carl Wilson (A3, OPF)
 Phillip Tømmerholt (National Archives of Denmark)
 Janet Anderson (University of Brighton)
 
-Text:
+- Text:
 
 CW introduces GH guides, which are under Get Started section. First link is for more describing concepts like branches etc. The second one is contribution guide, how to formulate pull requests, issues, clone repositories etc. People take a contact with CW if any Q-s. 
 ABN suggests to keep IP specs separate from content types IP specs, same for databases and geodata. It’s on the list for the next project (create CITS for SIARD). 
