--- a/MeetingNotes/03042019.md
+++ b/MeetingNotes/03042019.md
@@ -17,17 +17,17 @@ Folders and catalogues:
 
 CW summarizes: Lot of issues (approx. 20) are related the physical folder structure, we need convincing arguments why structure is mandatory. Lot of things in profile is depending on folder structure; also principles are depending on that. We need to come up with a good explanation why or what does this benefit? There are also Q-s like can I have other folders under these folders? 
 
-SS suggests not being too strict with it as in many cases it will end up with packages that have folders. Moreover, if this is the case then we recommend to doing it this way. If you have a repository with no folder structure but you still have METS file that points to these file objects which are stored in any other way, this also be valid. However, as soon as you export the package we recommend using folder structure. Regarding other packages, yes, we expect certain folders, e.g if I look for the metadata specific to a representation, I’d know where it is. Keeps explains that in many cases they even don’t parse the METS, not necessary. E.g, you want to get all the files in one representation, I want to ran or validate on them, I don’t need to parse the METS file, compile the list of pdf-s and run it, but I and also simply go and recursively catch all pdf-s that are in representation. It makes things easier.  
+SS suggests not being too strict with it as in many cases it will end up with packages that have folders. Moreover, if this is the case then we recommend to doing it this way. If you have a repository with no folder structure but you still have METS file that points to these file objects which are stored in any other way, this also be valid. However, as soon as you export the package we recommend using folder structure. Regarding other packages, yes, we expect certain folders, e.g if I look for the metadata specific to a representation, I’d know where it is. Keeps explains that in many cases they even don’t parse the METS, not necessary. E.g, you want to get all the files in one representation, then want to ran or validate on them, I don’t need to parse the METS file. Compile the list of pdf-s and run it, but I simply go and recursively catch all pdf-s that are in representation. It makes things easier.  
 KB It rises the Q why do we have METS? SS explains that METS explains the structure of the package, what metadata you have, we agreed to have checksums there, it has manifest file etc. METS allows us to agree in certain necessary structural requirements. Summarising discussion takes place between CW and SS about what METS allows. 
-MF comments that idea of using METS is that folder structure is logical structure. Everything SS said makes sense. 
+MF comments that idea of using METS is that folder structure is logical structure.
 SS comments that many people have concerns about obligatory, but he is in favour of relaxing this principle. If you use folders then you should really do it that way. But the structure is obligatory to be represented in METS file.  
 KB and CW will sum this up and put to the spec by next week’s meeting. 
 
 MF quick Q to CW about PDF generator, injected tables. CW will test it. 
 
-SS Q in principle all we do os in GH, current master branch represents the upcoming release. It simplifies the whole process. CW comments that master should really be the last released version. SS checks that if he is not sure about changes he should work on the branch. CW Yes. MF comments that it differs from the GH guidelines. CW the root cause of the problem is that you can only have one GH pages branch, but what really required is staging sites. KB comments that it is for the next project we don’t need it now. 
+SS Q to CW that in principle all we do os in GH, current master branch represents the upcoming release. It simplifies the whole process. CW comments that master should really be the last released version. SS checks that if he is not sure about changes he should work on the branch? CW Yes. MF comments that it differs from the GH guidelines. CW explains that the root cause of the problem is that you can only have one GH pages branch, but what really required is staging sites. KB comments that it is for the next project we don’t need it now. 
 
-CW and KB will continue meeting to have smth ready for the next meeting.
+CW and KB will use the time and continue meeting to have smth ready for the next meeting.
 
 Next meeting: on Apr 10th – issues for different specs will be discussed. 
 
