--- a/MeetingNotes/03042019.md
+++ b/MeetingNotes/03042019.md
@@ -1,4 +1,4 @@
-Members: 
+- Members: 
 
 •	Karin Bredenberg (National Archives of Sweden, chair)
 •	Miguel Ferreira (KEEP Solutions)
@@ -9,7 +9,7 @@ Members:
 •	Phillip Tømmerholt (National Archives of Denmark)
 •	Maximilian Maede (Bundesarchiv)
 
-Text:
+- Text:
 
 Reminder: We need to update DILCISboard webpage when we release new spec, pdf format.  KA will do the final editing. Great opportunity to look over the text: SS will update AIP text; KB will handle CSIP and RM; PT and ABN will aid SIARD and DIP.  
 
@@ -29,6 +29,6 @@ SS Q to CW that in principle all we do os in GH, current master branch represent
 
 CW and KB will use the time and continue meeting to have smth ready for the next meeting.
 
-Next meeting: on Apr 10th – issues for different specs will be discussed. 
+- Next meeting: on Apr 10th – issues for different specs will be discussed. 
 
-Notes by Karin Oolu
+- Notes by Karin Oolu
