--- a/MeetingNotes/03042019.md
+++ b/MeetingNotes/03042019.md
@@ -11,7 +11,7 @@
 
 - Text:
 
-Reminder: We need to update DILCISboard webpage when we release new spec, pdf format.  KA will do the final editing. Great opportunity to look over the text: SS will update AIP text; KB will handle CSIP and RM; PT and ABN will aid SIARD and DIP.  
+Reminder: We need to update DILCISboard webpage when we release new spec, pdf format.  Kuldar Aas will do the final editing. Great opportunity to look over the text: SS will update AIP text; KB will handle CSIP and RM; PT and ABN will aid SIARD and DIP.  
 
 Folders and catalogues: 
 
@@ -25,9 +25,9 @@ KB and CW will sum this up and put to the spec by next week’s meeting.
 
 MF quick Q to CW about PDF generator, injected tables. CW will test it. 
 
-SS Q to CW that in principle all we do os in GH, current master branch represents the upcoming release. It simplifies the whole process. CW comments that master should really be the last released version. SS checks that if he is not sure about changes he should work on the branch? CW Yes. MF comments that it differs from the GH guidelines. CW explains that the root cause of the problem is that you can only have one GH pages branch, but what really required is staging sites. KB comments that it is for the next project we don’t need it now. 
+SS Q to CW that in principle all we do is in GH and current master branch represents the upcoming release. It simplifies the whole process. CW comments that master should really be the last released version. SS checks that if he is not sure about changes should he work on the branch? CW Yes. MF argues that it differs from the GH guidelines. CW explains that the root cause of the problem is that you can only have one GH pages branch, but what really required is staging sites. KB says that it is for the next project, we don’t need it now. 
 
-CW and KB will use the time and continue meeting to have smth ready for the next meeting.
+CW and KB will use the rest of the meeting time to discuss and have smth ready for the next meeting.
 
 - Next meeting: on Apr 10th – issues for different specs will be discussed. 
 
