--- a/MeetingNotes/10042019.md
+++ b/MeetingNotes/10042019.md
@@ -13,14 +13,28 @@ Members:
 
 Text:
 
-KB gives an overview and comments about the status of issues regarding folders and catalogues of CSIP. Document is uploaded to Google Drive,  (https://docs.google.com/document/d/1fR87jlaMsQBiagijVOeq668waNBiQk0sqDZqrFmkkyU/edit#) KB and CW have made notes, also SS. To make it more open, we need some changes in principles First one is pr 3.6, which says we need to do physical folder structure mandatory, but saying so it overwrites pr 3.2 and 3.3 which are about physical and logical separations and are SHOULD at the moment. Should we change MUST to SHOULD? We also need to write differences between logical and physical structure, it is not clear for readers. 
+KB gives an overview and comments about the status of issues regarding folders and catalogues of CSIP. Document is uploaded to Google Drive (https://docs.google.com/document/d/1fR87jlaMsQBiagijVOeq668waNBiQk0sqDZqrFmkkyU/edit#). KB and CW have made notes, also SS. To make it more open we need some changes in principles. First one is pr 3.6, which says we need to do physical folder structure mandatory, but saying so it overwrites pr 3.2 and 3.3 which are about physical and logical separations and are SHOULD at the moment. Should we change MUST to SHOULD? We also need to write differences between logical and physical structure, it is not clear for readers. 
+
 ABN comments that having strict requirements makes it easier for DNA to validate in the end. It is beneficial when you have description of folder structure. 
-GZ comments that Q is about how software should be organised, some solutions do not organise their data in the archival packages as folders. Agrees with ABN that if too many shoulds we must take into account there are different approaches to packaging and changing all of them may be too complex. KB and CW were talked about setting up conformance level on this. The simplest level you conform to just having description in  METS. To the highest level you have physical folder structure as well. CW explains the details; the real issue is that you can’t conform with the structure. People already have structures and they don’t want to change it. It may be possible in couple of years. ABN adds it depends on the local legislations. 
+
+GZ comments that Q is about how software should be organised, some solutions do not organise their data in the archival packages as folders. Agrees with ABN that if too many shoulds we must take into account there are different approaches to packaging and changing all of them may be too complex. 
+
+KB and CW have talked about setting up conformance level on this. The simplest level you conform to just having description in METS. To the highest level you have physical folder structure as well. CW explains the details; the real issue is that you can’t conform with the structure. People already have structures and they don’t want to change it. It may be possible in couple of years. ABN adds it depends on the local legislations. 
+
 AKG haven’t had time to look at it, but will do it tomorrow and give feedback on it to KB.  As we need to have a decision next week latest, we should be ready for M11.
+
 PT reminds that we have principle that says package structure only existed in implementation part and don’t have visual layout how IP must look like. We do have an assumption to have distinction between logical and physical structure. KB comments that CSIP section 4 says we must use a folder structure, then it means we need to have the folder structure. So, PT don’t see the point to change pr 3.6 to should. 
-MF have looked at it and comments this kind of makes sense for AIP, not so much to the other IPs. When you have your own repository, e.g Fedora, folder structure kind of make sense. The whole point of AIP is to transfer data from one repository to another and if you have implementation that doesn’t support folder structure, you should think how to do it. CW adds that text will be expanded a bit and explicit, emphasis is on transfer. AIP is for transfer purposes, not so much for archival purposes, this is really the goal. ABN comments that on the other hand it is one way of having AIP structure as such. MF adds that we should consider that as a secondary goal and describes the case of shallow IPs for national TV station. Idea of this is to create IPs that don’t have original files within them but only pointers to those files. GZ don’t understand why it is important to have interoperable AIPs, maybe we should we have specific interoperable DIPs and SIPs? AIP contains a lot more information, it just serves different purposes. KB is not totally sure about that but asks ABN, who prefers stricter rules, to set up conformance level option for this to solve his case. 
+
+MF have looked at it and comments this kind of makes sense for AIP, not so much to the other IPs. When you have your own repository, e.g Fedora, folder structure kind of make sense. The whole point of AIP is to transfer data from one repository to another and if you have implementation that doesn’t support folder structure, you should think how to do it. CW adds that text will be expanded a bit and be more explicit, emphasis is on transfer. AIP is for transfer purposes, not so much for archival purposes, this is really the goal. 
+
+ABN comments that on the other hand it is one way of having AIP structure as such. MF adds that we should consider that as a secondary goal and describes the case of shallow IPs for national TV station. Idea of this is to create IPs that don’t have original files within them but only pointers to those files. GZ don’t understand why it is important to have interoperable AIPs, maybe we should we have specific interoperable DIPs and SIPs? AIP contains a lot more information, it just serves different purposes. KB is not totally sure about that but asks ABN, who prefers stricter rules, to set up conformance level option for this to solve his case. 
+
 KB and CW need to set up time to discuss all that, to be prepared next week. Input from todays meeting is really helpful and valuable. 
+
 MF Q asks about issues he sent, CW will look at them today. 
+
 ABN Q relates to the manifest part, checksums in METS file, what will happen if we change must to should many places? CW answers that one of advantages would be when having quick processing without going to METS file, but the manifest will still be compulsory. 
+
 Next meeting: on Apr 17th.
+
 Notes by Karin Oolu
