Changed in the last paragraph

--- a/MeetingNotes/10042019.md
+++ b/MeetingNotes/10042019.md
@@ -33,7 +33,7 @@ KB and CW need to set up time to discuss all that, to be prepared next week. Inp
 
 MF Q asks about issues he sent, CW will look at them today. 
 
-ABN Q relates to the manifest part, checksums in METS file, what will happen if we change must to should many places? CW answers that one of advantages would be when having quick processing without going to METS file, but the manifest will still be compulsory. 
+ABN Q relates to the manifest part, checksums in METS file, what will happen if we change must to should in many places? CW answers that one of advantages would be when having quick processing without going to METS file (when you are in a controlled enviroment and dont use the manifest), but the manifest will still be compulsory. 
 
 Next meeting: on Apr 17th.
 
