--- a/MeetingNotes/17042019.md
+++ b/MeetingNotes/17042019.md
@@ -36,7 +36,7 @@ Comment regarding numbering, it should be the same number if the same requiremen
 PT raises the Q  about issue #398 https://github.com/DILCISBoard/E-ARK-CSIP/issues/398. A3 group is creating test cases for validating, whether IP conforms to CSIP, I ran in to @xLink:href attribute. Req states that you have to describe the actual location of the resource. In integrity check, to make sure all files are described, it doesn’t state specifically how to describe this file path URL. CW comments that it has been discussed and there is no legal URL for a relative file path, there’s the problem. PT Q could we give a syntax? KB comments syntax can be given, we have it in the text relative to the roots of the package. There is a standard how to use @xLink:href, and we cant say how is the way to do it. It just says the most commone one is this and then follows slashslashslash. CW discusses different options what may work to solve the problem. 
 PT raises also a side Q: We have root METS and representation METS and if you are in root METS then you are able to see the whole package. But if you are in the representation METS, then that leaves you with no idea if that representation is within this IP.  CW comments its a horrible good Q, we need to come up with policy on that. Decided: PT creates an issue of the Q after the meeting, so KB can link it to mail being sent to out with all issues to be solved. The reason problem came up now is that PT is creating example of database in IP and running through the files. Nice work PT! 
 
-KB will write an e-mail to have comments by afternoon WED.
+KB will send out an e-mail to have comments by afternoon next WED.
  
 Next meeting on Apr 29th. 
 
