--- a/MeetingNotes/20190429.md
+++ b/MeetingNotes/20190429.md
@@ -8,23 +8,23 @@ Members:
 •	Phillip Tømmerholt (National Archives of Denmark)
 
 Text:
-PullRequest #401 (https://github.com/DILCISBoard/E-ARK-CSIP/pull/401) Package MUST provide logical separation of data and metadata in the package's manifest. Suggested changes from CW. ABN Q how do we handle the leveling? It cant be in the principle, it needs to be in extra text. Status: OK
+
+Package MUST provide logical separation of data and metadata in the package's manifest - PullRequest #401 (https://github.com/DILCISBoard/E-ARK-CSIP/pull/401) Suggested changes from CW. ABN Q how do we handle the leveling? It cant be in the principle, it needs to be in extra text. Status: OK
  
-PullRequest #399 (https://github.com/DILCISBoard/E-ARK-CSIP/pull/399) Update of pr 3.6, re-ordered. Status: OK
+Update of pr 3.6, re-ordered - PullRequest #399 (https://github.com/DILCISBoard/E-ARK-CSIP/pull/399). Status: OK
 
-PullRequest #402 (https://github.com/DILCISBoard/E-ARK-CSIP/pull/402) Folder structure MOSCOW statements. Status OK with a comment in line 2: should needs to be marked as bold. 
+Folder structure MOSCOW statements - PullRequest #402 (https://github.com/DILCISBoard/E-ARK-CSIP/pull/402) Status OK with a comment in line 2: should needs to be marked as bold. 
 
-Issue #29 SIP (https://github.com/DILCISBoard/E-ARK-SIP/issues/29) Proposal of adding Retention/Disposal elements. Local implementation, we should not have it in CSIP. Moved forward to the next project. 
+Proposal of adding Retention/Disposal elements - Issue #29 SIP (https://github.com/DILCISBoard/E-ARK-SIP/issues/29). Local implementation, we should not have it in CSIP. Moved forward to the next project. 
 
-Issue #30 SIP (https://github.com/DILCISBoard/E-ARK-SIP/issues/30) All extra elements for SIP, AIP and DIP should be included in CSIP. MF has closed, finished and done. 
+All extra elements for SIP, AIP and DIP should be included in CSIP - Issue #30 SIP (https://github.com/DILCISBoard/E-ARK-SIP/issues/30). MF has closed, finished and done. 
 
-Issue #17 Group Documentation (https://github.com/DILCISBoard/GroupDocumentation/issues/17) discussion about having common introductory text, CW and MF have been working on this. This explaining text should be in the beginning of specs as well. GZ have been busy with geodata conference, will be contributing more since next week. 
+Discussion about having common introductory text, CW and MF have been working on this - Issue #17 Group Documentation (https://github.com/DILCISBoard/GroupDocumentation/issues/17). This explaining text should be in the beginning of specs as well. GZ have been busy with geodata conference, will be contributing more since next week. 
 
-Issue #398 CSIP (https://github.com/DILCISBoard/E-ARK-CSIP/issues/398 )Testability of @xlink:href attribute in METS -  no one has commented on this. Thats not good, we will be setting up the deadline for that. CW and KB will be sitting on Wednesday, will be have an answer after Wednesday. ABN and KB comment their local cases in SWE and DK. 
-
+Testability of @xlink:href attribute in METS - Issue #398 CSIP (https://github.com/DILCISBoard/E-ARK-CSIP/issues/398 ). No one has commented on this. Thats not good, we will be setting up the deadline for that. CW and KB will be sitting on Wednesday, will be have an answer after Wednesday. ABN and KB comment their local cases in SWE and DK. 
 Similar with the next issue#406 (https://github.com/DILCISBoard/E-ARK-CSIP/issues/406), they both are connected. KB and CW will look that on Wed too. 
 
-Dates: KB and CW will be sitting on WED and MON, with CSIP to be ready by MON. We should be ready by the last of APR. 
+- Dates: KB and CW will be sitting on WED and MON, with CSIP to be ready by MON. We should be ready by the last of APR. 
 But being so few in the call, the next meeting on May 8th, everybody needs to be able to say when they will be ready with all specifications. Homework for everyone! OK! KB We will send out an update.
 ABN Q when we are going to introduce the living part, leveling when and how? 
 KB comments we need to be ready by May 8th. KB and CW will let everyone know by THU morning.
