--- a/MeetingNotes/20190429.md
+++ b/MeetingNotes/20190429.md
@@ -1,6 +1,6 @@
 Minutes
 
-Members: 
+- Members: 
 •	Karin Bredenberg (National Archives of Sweden, chair)
 •	Karin Oolu (DLM)
 •	Anders Bo Nielsen (National Archives of Denmark)
@@ -29,14 +29,18 @@ But being so few in the call, the next meeting on May 8th, everybody needs to be
 ABN Q when we are going to introduce the living part, leveling when and how? 
 KB comments we need to be ready by May 8th. KB and CW will let everyone know by THU morning.
 
-GZ Q about geospecs format (pdf or GH)? ERMS and geodata will be put into GH format during summer, it takes time to change it. KB suggests to put whole document with comments as an issue, so it will be all together and transparent. Also incl e-mail comments. 
+- GZ Q-s: 
 
-PT Q about communication with reviewers. They have got an e-mail with thank you. KB plan is to create an e-mail where they can find all the issues they have commented. 
+1. Geospecs format (pdf or GH)? ERMS and geodata will be put into GH format during summer, it takes time to change it. KB suggests to put whole document with comments as an issue, so it will be all together and transparent. Also incl e-mail comments. 
 
-GZ Q about what’s the preferred way to engage Geopres conference community? People there have technical .knowledge and expertise, national mapping agencies who manage their own archives. 
+2. Communication with reviewers. They have got an e-mail with thank you. KB plan is to create an e-mail where they can find all the issues they have commented. 
+
+3. what’s the preferred way to engage Geopres conference community? People there have technical .knowledge and expertise, national mapping agencies who manage their own archives. 
 Ask them to sign up to mailing list, they can be voluntary sub group. You as the team lead, can create a list of these people, similar done it in Premis board. This is not limited to Europe, Americans are very keen to learn from us and contribute their knowledge. Would be good to find people from Asia.  
-GZ Q about LT preservation formats. Dilcis board can’t take this as lot of others are dealing with that like OPF, Pronom, Lib of Congress. GZ puts it on the paper and then we can address to the right place. 
-GZ Q about how geo sper contribute to SIP and DIP specs. Ask for reference links from KB if ready. 
+
+4. LT preservation formats. Dilcis board can’t take this as lot of others are dealing with that like OPF, Pronom, Lib of Congress. GZ puts it on the paper and then we can address to the right place. 
+
+5. How geo spec contribute to SIP and DIP specs? Ask for reference links from KB if ready. 
 
 KB will send out a mail update. 
 
