--- a/MeetingNotes/20190429.md
+++ b/MeetingNotes/20190429.md
@@ -7,7 +7,7 @@ Minutes
 •	Gregor Zavrsnik (Geoarh)
 •	Phillip Tømmerholt (National Archives of Denmark)
 
-Text:
+- Text:
 
 Package MUST provide logical separation of data and metadata in the package's manifest - PullRequest #401 (https://github.com/DILCISBoard/E-ARK-CSIP/pull/401) Suggested changes from CW. ABN Q how do we handle the leveling? It cant be in the principle, it needs to be in extra text. Status: OK
  
