--- a/MeetingNotes/20190429.md
+++ b/MeetingNotes/20190429.md
@@ -24,8 +24,11 @@ Discussion about having common introductory text, CW and MF have been working on
 Testability of @xlink:href attribute in METS - Issue #398 CSIP (https://github.com/DILCISBoard/E-ARK-CSIP/issues/398 ). No one has commented on this. Thats not good, we will be setting up the deadline for that. CW and KB will be sitting on Wednesday, will be have an answer after Wednesday. ABN and KB comment their local cases in SWE and DK. 
 Similar with the next issue#406 (https://github.com/DILCISBoard/E-ARK-CSIP/issues/406), they both are connected. KB and CW will look that on Wed too. 
 
-- Dates: KB and CW will be sitting on WED and MON, with CSIP to be ready by MON. We should be ready by the last of APR. 
-But being so few in the call, the next meeting on May 8th, everybody needs to be able to say when they will be ready with all specifications. Homework for everyone! OK! KB We will send out an update.
+- Dates: 
+
+KB and CW will be sitting on WED and MON with CSIP to be ready by MON. We should be ready by the last of APR. 
+But being so few in the call, the next meeting on May 8th, everybody needs to be able to say when they will be ready with all specifications. Homework for everyone! KB We will send out an update.
+
 ABN Q when we are going to introduce the living part, leveling when and how? 
 KB comments we need to be ready by May 8th. KB and CW will let everyone know by THU morning.
 
