--- a/MeetingNotes/20190508.md
+++ b/MeetingNotes/20190508.md
@@ -1,6 +1,8 @@
+
 Minutes
 
 Members: 
+
 •	Karin Bredenberg (National Archives of Sweden, chair)
 •	Karin Oolu (DLM)
 •	Anders Bo Nielsen (National Archives of Denmark)
@@ -12,20 +14,27 @@ Members:
 •	Maximilian Maede (Bundesarchiv)
 
 Text:
+
 1.	Requirement numbering
+
 CW has sent an e-mail with updated status of issues and pull requests in GH, also with Q to be considered: requirement numbering. KB comments that we’ve been talking about having the same starting acronym and then adding in the section, either with new acronym or full name and then running no. We need to remember these are true xml ID-s, we can’t introduce some characters. CW asks if it causes anyone a trouble if we change that? We could do re-numbering, but it’s a lot of extra work. We need unique id. SS is using acronym name rather than some sequential ordering in AIP, not sure about numbering. CW will take a look and will get back with proposal in near days. There should be consistence on this. MF reminds a suggestion from general public that we should align the numbering between specs. One req in CS with particular attribute on the METS root and same nr in SIP spec – tricky way, we don’t have that at the moment. We should be lot more careful in SIP/AIP/DIP and matching them. KB comments that if we do this we get numbering being coherent in the beginning between different sections, its easy to follow along METS root req being easy to spot in SIP/AIP/DIP. MF agrees with SS, that if we add another requirement and restart the numbering all together, it s going to be very hard to maintain in coherent way. We should have a unique identifier. SS comments you don’t need a number if you have unique identifier. CW proposes to look at the specs numbering and get email around to get suggestions and decide after this. We should have delivered all this on the last of April. At least with CSIP we should be ready by Monday. Decided: Agreed with MF to be more conservative and don’t change it in this version and we’ll look in the next project. 
 
 2.	Status of issues 
+
 KB shares the screen with 84 open issues, 77 closed issues (incl guidelines and informative ones), open pull requests with up to 20 issues. CW gives comments about work done and what will be solved in near days. Will be published as PDF by Mon, May 13th. At the same time we need to think about text changes on DILCIS Board web page. KA and IA are taking care of that, so links with pdf-s would be available there. 
-- Dilcis board meeting in Bern
+
+3.	Dilcis board meeting in Bern
+
 Extended meeting with Dilcis board and A2. KB will setup Webex connection. As we need to clear the room by 11.30, we are going to start 8.30. We are going to discuss project next phase, open remaining Q-s what we are doing now and what we are going to do from 1st of June. There will be yellow marked text available for all. JA has shared a link of participation in GDrive.  
 
-3.	AOB
+4.	AOB
+
 1.	The bid is going to Luxemburg today! 
-2.	GZ: is my update for geo spec is Monday? KB we publish it by next Friday. We have promised to deliver 2 guidelines. One is for revision process and the other one is for CITS, I have draft and Jamie is going to put it to the right template. We need to do more work with them in the next project. I’ve just gather top level things so we can start with.
+2.	GZ: is my update for geo spec is Monday? KB we publish it by next Friday, . We have promised to deliver 2 guidelines. One is for revision process and the other one is for CITS, I have draft and Jamie is going to put it to the right template. We need to do more work with them in the next project. I’ve just gather top level things so we can start with.
 3.	MF Q about images. Since JK is in Ljubljana, KB will check up the status asap possible. 
 
-Recap: Next meeting next Wed, May 15th. CW and KB will send out email ASAP, KB and KO will send out agenda for Dilcis board meeting in Bern in the beginning of next week. We will have new member from Swiss Federal Archives who will aid us with SIARD.
+Recap: Next meeting next Wed, May 15th. CW and KB will send out email ASAP, KB and KO will send out agenda for Dilcis board meeting in 
+Bern in the beginning of next week. We will have new member from Swiss Federal Archives who will aid us with SIARD.
 
 Thanks to all for the work!  
 
