--- a/MeetingNotes/20190515.md
+++ b/MeetingNotes/20190515.md
@@ -22,7 +22,7 @@ CW shows to MF specific case on screen and will send an e-mail so MF can make co
 
 1.	Open CSIP questions
 
-KB shares the screen, what’s ready and what’s not: Roman numbers- not totally ready. Please send info to KB if images missing. SS Q about sources, Visio. Please raise an issue in GH.KB asks JK to contact with SS to update the master file. 
+KB shares the screen, what’s ready and what’s not: Roman numbers- not totally ready. Please send info to KB if images missing. SS Q about sources, Visio. Please raise an issue in GH. KB asks JK to contact with SS to update the master file. 
 
 CW gives a list what will be changed. Generate contents of PDF, acknowledgements, revision history, relations not ok with, but rest of the sections - happy to declare they are done. 
 
@@ -38,13 +38,13 @@ Recap: KB and CW will send out an e-mail.
 
 2.	Date of delivery of all specs
 
-GZ spec not finished until the next week. Bern meeting next week. We need to publish before the project ends, 31st of May. We are overdue a month, but we can justify that. It means we must be ready by Mon 27th before the lunch. Discussion about finding the time that suits to everyone. 
+GZ spec not finished until the next week. Bern meeting next week. We need to publish before the project ends, we are overdue a month, but we can justify that. Discussion about finding the time that suits to everyone. 
 
 Roundup for specs: most of issues closed in SIP, most of them are related with generation of PDF, concerns about alignment between specs, related to terminology, will talk to KB later. MF can probably meet the deadline, will work with KB and CW next week in Bern to solve the rest of the issues. SS Q about if CW will generate them? Yes. ABN comments that there is very few time left, just today and tomorrow. Next week we only have 24th of May. Looks rather difficult. KB trying to finish with ERMS to be ready this week. 
 
 3.	Webpage updates 
 
-KB will send the mail to coordinators that we can’t publish before 29th. We need to say when we publish and project is actually ending. Discussion about finding the time. 30th and 31st of May will be reserved only for JK for final editing, no bugs etc are allowed then.  Can’t postpone as everything have to be ready a week before the review. 
+There are several places where specs should be published. We need to say when we publish. Discussion about finding the time. 30th and 31st of May will be reserved only for JK for final editing, no bugs etc are allowed then. Can’t postpone as everything have to be ready a week before the review. 
 
 Recap: KB will send an e-mail to coordinators everything will be ready by 29th, copy to A2. Cancel the meeting on 21st. Keeping meeting on 29th to check in everything, and publishing on 31st of May. 
 
