--- a/MeetingNotes/20190515.md
+++ b/MeetingNotes/20190515.md
@@ -18,11 +18,9 @@ Agenda:
 
 Text:
 
-CW shows to MF specific case on screen and will send an e-mail so MF can make corrections. 
-
 1.	Open CSIP questions
 
-KB shares the screen, what’s ready and what’s not: Roman numbers- not totally ready. Please send info to KB if images missing. SS Q about sources, Visio. Please raise an issue in GH. KB asks JK to contact with SS to update the master file. 
+KB shares the screen, what’s ready and what’s not: roman numbers- not totally ready. Please send info to KB if images missing. SS Q about sources, Visio. Please raise an issue in GH. KB asks JK to contact with SS to update the master file. 
 
 CW gives a list what will be changed. Generate contents of PDF, acknowledgements, revision history, relations not ok with, but rest of the sections - happy to declare they are done. 
 
