--- a/MeetingNotes/20190521.md
+++ b/MeetingNotes/20190521.md
@@ -64,13 +64,13 @@ CW and KB has been working with issues of CSIP, there are 38 open issues for ver
 
 1. CSIP chapters 6.2.2 and 6.2.3. (http://earkcsip.dilcis.eu/#62-handling-large-packages) 
 
-How we can split the package, #HREF is not purely correct either, partly also in AIP. Cohernce with AIP, Q is that how do you know if you are pointing to a parent or to a child? We need to look into how we do referencing and what we are referencing. KB suggests to copy the text and save it for work further on. We are doing the same thing with representation, but not with splitted package. Why don’t we do it like we do when pointing to representation, whats different from pointing to another package? ABN comments to solve it rather soon. We’re running out of time as a project work. Board-wise we could work with that longer. But the project has helped with getting things ready. Discussion about what can be done before next Fri. ABN proposes to put it in the workplan for DILCIS board this year. MF comments they have had the same discussion in Austria as well, it is a major change and has impact to tools. KB would rather have short sub-text that segmentation is going to be handled, but it needs more testing and evaluation. It is complex problem, would be nice to have someone developing it. ABN adds that he has someone who is developing but it needs to get common understanding here, among the board.
-KB comments that if we are treating splitting in the same way we treat representation there is no issue descr splitting. If we do the pointing the same way (mets reference), we just need to say its not representation but piece of the package. Q is how this spec evolves, splitting is a user demand. We can keep it as a separate recommendation, then test it. CW adds it depends on how difficult to get change in. Split could be part of ind representation. MF having portions from parallel could be tricky. Extremely hard problem. KB says we really need to test this, getting noark xml files with 1 TB. MF reminds shallow IP-s, files could be anywhere. MF we should explore this more. 
+How we can split the package, #HREF is not purely correct either, partly also in AIP. Cohernce with AIP, Q is that how do you know if you are pointing to a parent or to a child? We need to look into how we do referencing and what we are referencing. KB suggests to copy the text and save it for work further on. We are doing the same thing with representation, but not with splitted package. Why don’t we do it like we do when pointing to representation, whats different from pointing to another package? ABN comments to solve it rather soon. We’re running out of time as a project work. Board-wise we could work with that longer. But the project has helped with getting things ready. ABN proposes to put it in the workplan for DILCIS board this year. MF comments they have had the same discussion in Austria as well, it is a major change and has impact to tools. KB would rather have short sub-text that segmentation is going to be handled, but it needs more testing and evaluation. It is complex problem, would be nice to have someone developing it and it needs to get common understanding among the board. If we do the pointing the same way (METS reference), we just need to say its not representation, but piece of the package. Q is how this spec evolves, splitting is a user demand. We can keep it as a separate recommendation, then test it. It depends on how difficult to get change in. Split could be part of ind representation. Having portions from parallel could be tricky. Extremely hard problem. We really need to test this, getting noark xml files with 1 TB. MF reminds shallow IP-s, files could be anywhere. 
+
 Decision: Its a complex problem and cant be solved in couple of days. KB will cut text in current ver to minimum, but save it for future development. Summer task for D board and for the project. Fingers crossed it will be in ”.no” release. Starting 1st of June and would be fine to be ready by the end of the year (but cant be promised). 
 ABN adds these things are needed for production, vendors should be told how to do this. We will do it as recommendation because everyone is doing it differently. Bringing scalability to packages – MF describes detailed experience of 1TB AIP. 
 
 2. Showing version of CSIP used. 
-If it should be an attribute showing which ver we are using. We are actually doing it profile attribute. We need to have one common and one versioned. KB we are not changing the name of the METS schema, only thing we can make change is METS profile. Just gets it running no from lib of congress web page. CW comments how horrible it is. ABN you have to rely on checksums in reality. 
+If it should be an attribute showing which ver we are using. We are actually doing it profile attribute. We need to have one common and one versioned. KB we are not changing the name of the METS schema, only thing we can make change is METS profile. Just get running no from Lib of Congress web page. CW comments how horrible it is. ABN adds that in reality you have to rely on checksums. 
 Decision – we will let everybody know what we’ll do. 
 
 The rest of the issues are proof reading and just updates to the text. 
@@ -78,4 +78,9 @@ The rest of the issues are proof reading and just updates to the text.
 5.	Next project plan and milestones
 
 Going through hoping what we are going to next project. 
+
 Meetings – not only A2 every Wed but depending on the work. WED – agreed good time for everybody. KB will put it up since June 1st for 2 years.  
+
+Next meeting: May 28th
+
+Notes by: Karin Oolu
