--- a/MeetingNotes/20190521.md
+++ b/MeetingNotes/20190521.md
@@ -41,7 +41,7 @@ Agenda:
 
 Text: 
 
--1.	Welcome. Secretary of the meeting, announcment of AoB.
+- 1.	Welcome. Secretary of the meeting, announcment of AoB.
 
 Introduction of attendees, new: Mads Porsklev (Sydarkivera, new member of DLM Forum, future A2), Jose Skofljanec (Slovenian National Arhives, future A2, specification of metadata)  
 
