--- a/MeetingNotes/20190521.md
+++ b/MeetingNotes/20190521.md
@@ -48,17 +48,17 @@ Introduction of attendees, new: Mads Porsklev (Sydarkivera, new member of DLM Fo
 Secretary of the meeting: Karin Oolu
 Notes will be to GH.
 
--2.	AoB
+- 2.	AoB
 
 Silence, if they come we’ll arrive to this. 
 
--3.	DILCIS Board bylaws 
+- 3.	DILCIS Board bylaws 
 
 Draft has been sent to board members beforehand. Big change is about cycles of membership, its hard to change people during a project. There is an annex where we say how we revise the spec etc. No remarkable comments or Q-s.
 
 Decision: The board has agreed upon the draft.
 
--4.	Outstanding issues from e-ARK4ALL A2
+- 4.	Outstanding issues from e-ARK4ALL A2
 
 CW and KB has been working with issues of CSIP, there are 38 open issues for ver 2. Most of the open ones are for proof reading. There are 1 or 2 we have to bring out today: 
 
@@ -75,7 +75,7 @@ Decision – we will let everybody know what we’ll do.
 
 The rest of the issues are proof reading and just updates to the text. 
 
--5.	Next project plan and milestones
+- 5.	Next project plan and milestones
 
 Going through hoping what we are going to next project. 
 
